--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2178,13 +2178,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "submission = pd.DataFrame({\n",
-    "        \"PassengerId\": test_df[\"PassengerId\"],\n",
-    "        \"Survived\": Y_pred\n",
+    "        \"PassengerId\": data_test[\"PassengerId\"],\n",
+    "        \"Survived\": predictions\n",
     "    })"
    ]
   }
